<resources>
    <string name="app_name">MyDeliciousCandies</string>
    <string name="txtmanufacturer">Manufacturer</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="format">Format</string>
    <string name="sweetness">Sweetness</string>
    <string name="url">Url</string>
    <string name="add">ADD</string>
    <string name="buscar">buscar</string>
    <string name="manufacturer">manufacturer</string>
    <string name="favorite">favorite</string>
    <string name="submit">submit</string>
    <string name="update">update</string>
    <string name="add_photo">add photo</string>
    <string name="foto">Foto</string>
    <string name="update_photo">update photo</string>

</resources>