<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="#CEDCE8"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtManufactured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtmanufacturer"
            app:layout_constraintEnd_toEndOf="@+id/txtName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/format"
            app:layout_constraintEnd_toEndOf="@+id/txtManufactured"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtManufactured"
            app:layout_constraintTop_toBottomOf="@+id/txtManufactured" />

        <TextView
            android:id="@+id/txtType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_weight="1"
            android:text="@string/type"
            app:layout_constraintBottom_toTopOf="@+id/txtSweetness"
            app:layout_constraintStart_toEndOf="@+id/txtName"
            app:layout_constraintTop_toTopOf="@+id/txtName"
            app:layout_constraintVertical_bias="0.466" />

        <TextView
            android:id="@+id/txtSweetness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/sweetness"
            app:layout_constraintBottom_toBottomOf="@+id/txtManufactured"
            app:layout_constraintStart_toEndOf="@+id/txtManufactured"
            app:layout_constraintTop_toTopOf="@+id/txtManufactured"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_weight="1"
            android:text="@string/url"
            app:layout_constraintStart_toEndOf="@+id/txtFormat"
            app:layout_constraintTop_toBottomOf="@+id/txtSweetness" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>